[metadata]
name = feedmaterial
version = 0.0.3
description = MeerK40t Feed Material
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
keywords = lasercutter
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/tatarize/feedmaterial
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

[options.entry_points]
meerk40t.extension = Example = feed.main:plugin
